maze.lessons.maze.island.IslandMaze.scala.error
Escaper:31: error: unclosed comment
/*
^Escaper:31: error: unclosed comment
/*
^Escaper:31: error: unclosed comment
/*
^Escaper:211: error: '}' expected but eof found.
}
 ^